# Multicore-Programming-Project-Erlang

./: .gitignore  README.md
src/: $  analyze.py  benchmark.erl  bucket.erl  cbucket.erl  compile.sh  cworker.erl  initialization-time.csv  measurements.csv  pyproject.toml  run_benchmarks.ps1  run_benchmarks.sh  server.erl  server_centralized.erl  server_decentralized.erl  server_multi_shard_cache.erl  server_shard_cache.erl  server_worker_shard_cache.erl  tests.erl  worker.erl  µ
src/benchmarks-firefly1/: central-mix1.txt  central-mix10.txt  central-mix11.txt  central-mix12.txt  central-mix13.txt  central-mix14.txt  central-mix15.txt  central-mix16.txt  central-mix17.txt  central-mix18.txt  central-mix19.txt  central-mix2.txt  central-mix20.txt  central-mix21.txt  central-mix22.txt  central-mix23.txt  central-mix24.txt  central-mix25.txt  central-mix26.txt  central-mix27.txt  central-mix28.txt  central-mix29.txt  central-mix3.txt  central-mix30.txt  central-mix31.txt  central-mix32.txt  central-mix33.txt  central-mix34.txt  central-mix35.txt  central-mix36.txt  central-mix37.txt  central-mix38.txt  central-mix39.txt  central-mix4.txt  central-mix40.txt  central-mix41.txt  central-mix42.txt  central-mix43.txt  central-mix44.txt  central-mix45.txt  (+345 more)
src/benchmarks-omen-dict/: central-mix1.txt  central-mix10.txt  central-mix11.txt  central-mix12.txt  central-mix13.txt  central-mix14.txt  central-mix15.txt  central-mix16.txt  central-mix17.txt  central-mix18.txt  central-mix19.txt  central-mix2.txt  central-mix20.txt  central-mix21.txt  central-mix22.txt  central-mix23.txt  (+560 more)
(+1410 files in other folders)
