[project]
name = "erlang-benchmarks"
version = "1"
description = ""
authors = [
    {name = "Gérard Lichtert",email = "62557229+thebaconfate@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "polars (>=1.26.0,<2.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
